fix scrollbar css

--- a/public/css/all-src.less
+++ b/public/css/all-src.less
@@ -11,10 +11,6 @@ body,
   overflow-y: hidden;
 }
 
-.nano {
-  overflow-y: auto;
-}
-
 .sidebar {
   float: left;
   clear: left;
